[gd_scene load_steps=29 format=3 uid="uid://0bfaiy4xk6er"]

[ext_resource type="Script" path="res://scenes/pawns/enemies/suecypher/suecypher.gd" id="1_ckf2t"]
[ext_resource type="PackedScene" uid="uid://cusbqirbbwfwx" path="res://scenes/weapons/enemy_ball_bullet/enemy_ball_bullet.tscn" id="2_1qcc3"]
[ext_resource type="PackedScene" uid="uid://c7wv0n5n7l7x4" path="res://scenes/components/health_component/health_component.tscn" id="3_gtndc"]
[ext_resource type="PackedScene" uid="uid://cspcugxorotor" path="res://scenes/components/hurtbox_component/hurtbox_component.tscn" id="4_ng6o8"]
[ext_resource type="PackedScene" uid="uid://cfo1rpvdpemxj" path="res://scenes/components/hit_flash_component/hit_flash_component.tscn" id="5_lljti"]
[ext_resource type="PackedScene" uid="uid://ddwtfhud2pam6" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="6_5m3x4"]
[ext_resource type="Texture2D" uid="uid://mrndyryj6xst" path="res://assets/sprites/enemies/suecypher.png" id="7_vgxra"]
[ext_resource type="PackedScene" uid="uid://bu8kgcot4n6tt" path="res://scenes/components/off_screen_component/off_screen_component.tscn" id="7_w3fmi"]
[ext_resource type="Texture2D" uid="uid://b12u6tg2a0hst" path="res://assets/sprites/vfx/explosions/explosion-a.png" id="9_xe04b"]
[ext_resource type="AudioStream" uid="uid://dh1x4qmkoywop" path="res://assets/audios/explosions/retro_explosion_general_08.wav" id="10_tiebx"]
[ext_resource type="PackedScene" uid="uid://bjpf7yn6meg0k" path="res://scenes/components/item_drop_component/item_drop_component.tscn" id="11_0ukhy"]
[ext_resource type="PackedScene" uid="uid://cdqny6j5cggy6" path="res://scenes/components/direction_anchor/direction_anchor.tscn" id="12_vjms0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6k1x"]
size = Vector2(24, 21)

[sub_resource type="Shader" id="Shader_l7m31"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform float mix_weight: hint_range(0.0, 1.0) = 1.0;
uniform float alpha: hint_range(0.0, 1.0) = 1.0;
uniform vec4 color: source_color = vec4(1, 1, 1, 1);

void fragment() {
	vec4 texture_color = texture(TEXTURE, UV);
	vec3 white = vec3(1, 1, 1);
	vec3 whitened_texture_rgb = mix(texture_color.rgb, color.rgb, mix_weight);
	COLOR = vec4(whitened_texture_rgb, texture_color.a * color.a * alpha);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q7h53"]
resource_local_to_scene = true
shader = SubResource("Shader_l7m31")
shader_parameter/mix_weight = 0.0
shader_parameter/alpha = 1.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81mnj"]
size = Vector2(24, 21)

[sub_resource type="Animation" id="Animation_775xj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySprite:material")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DiedSE:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HeadSprite:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ff06v"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.594604),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySprite:material")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DiedSE:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HeadSprite:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8w2e1"]
resource_name = "idle"
length = 0.25
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pfjm8"]
resource_name = "shoot"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbrqs"]
_data = {
"RESET": SubResource("Animation_775xj"),
"die": SubResource("Animation_ff06v"),
"idle": SubResource("Animation_8w2e1"),
"shoot": SubResource("Animation_pfjm8")
}

[sub_resource type="Animation" id="Animation_6xdya"]
resource_name = "idle"
length = 0.25
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_u2sbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rem64"]
_data = {
"RESET": SubResource("Animation_u2sbn"),
"idle": SubResource("Animation_6xdya")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n75fr"]
size = Vector2(24, 21)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fvkg7"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ttb0o"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6bxn"]
size = Vector2(310, 316)

[node name="Suecypher" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 129
motion_mode = 1
script = ExtResource("1_ckf2t")
bullet_scene = ExtResource("2_1qcc3")

[node name="HealthComponent" parent="." instance=ExtResource("3_gtndc")]
max_health = 2.0

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_ng6o8")]
visible = false
collision_layer = 4
collision_mask = 8
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_r6k1x")
debug_color = Color(0.803922, 0.360784, 0.552941, 0.419608)

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("hurtbox_component", "sprite") instance=ExtResource("5_lljti")]
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../BodySprite")
whiten_material = SubResource("ShaderMaterial_q7h53")

[node name="HitboxComponent" parent="." instance=ExtResource("6_5m3x4")]
visible = false
collision_layer = 4
collision_mask = 2
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_81mnj")
debug_color = Color(0.717647, 0.470588, 0.290196, 0.419608)

[node name="OffScreenComponent" parent="." instance=ExtResource("7_w3fmi")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_tbrqs")
}

[node name="HeadAnimation" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_rem64")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_n75fr")

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("7_vgxra")
flip_h = true
hframes = 7
vframes = 2

[node name="HeadSprite" type="Sprite2D" parent="."]
texture = ExtResource("7_vgxra")
flip_h = true
hframes = 7
vframes = 2
frame = 7

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_fvkg7")
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_ttb0o")
texture = ExtResource("9_xe04b")
lifetime = 0.5
one_shot = true

[node name="DiedSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_tiebx")
volume_db = -23.363
pitch_scale = 1.2
bus = &"SE"

[node name="ItemDropComponent" parent="." instance=ExtResource("11_0ukhy")]

[node name="BodyDirection" parent="." instance=ExtResource("12_vjms0")]
rotation = 3.14159

[node name="TurretDirectionL" parent="." instance=ExtResource("12_vjms0")]
position = Vector2(-11, 0)
rotation = 3.14159

[node name="TurretDirectionR" parent="." instance=ExtResource("12_vjms0")]
position = Vector2(11, 0)

[node name="PlayerDetectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
shape = SubResource("RectangleShape2D_q6bxn")
debug_color = Color(0.670588, 0.392157, 0.827451, 0.0980392)

[node name="ShotCooltime" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="TurnTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="PatrolMarker1" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -40)

[node name="PatrolMarker2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 40)

[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_exited"]
